[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui/map/MapUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/objects/GamePlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/map/SceneMap.gd" type="Script" id=4]
[ext_resource path="res://src/data/maps/IslandBackground.tscn" type="PackedScene" id=5]

[node name="SceneMap" type="Node2D"]
script = ExtResource( 4 )

[node name="MapUI" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -12, -53 )
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
limit_left = 0
limit_top = 0
limit_right = 1280
limit_bottom = 720
editor_draw_limits = true

[node name="MapHolder" type="Node2D" parent="."]

[node name="YSort" type="YSort" parent="."]

[node name="GamePlayer" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( -12, -53 )

[node name="BackgroundHolder" type="CanvasLayer" parent="."]
layer = -10
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )

[node name="IslandBackground" parent="BackgroundHolder" instance=ExtResource( 5 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = "SFX"

[node name="AlternativeAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = "SFX"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="AlternativeAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[connection signal="tree_entered" from="." to="." method="_on_SceneMap_tree_entered"]
